# urbanWater

./: MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
configs/: config.toml
duwcm/: __init__.py  case_manager.py  checker.py  chord.py  data_structures.py  exportGIS.py  flow_manager.py  forcing.py  initialization.py  main.py  postprocess.py  read_data.py  scenario_manager.py  summary.py  water_balance.py  water_model.py
duwcm/components/: __init__.py  demand.py  flow_matrix.py  greenroof.py  groundwater.py  impervious.py  pavement.py  pervious.py  pond.py  raintank.py  reuse.py  roof.py  sewerage.py  stormwater.py  stormwatertank.py  vadose.py  wastewater.py  waterbody.py
duwcm/diagnostics/: __init__.py  alert.py  diagnostics.py  figures.py  summary.py
duwcm/functions/: __init__.py  cell_selector.py  checker.py  export_gis.py  findorder.py  flow_matrix.py  generate_alluvial.py  generate_chord.py  generate_graph.py  generate_maps.py  generate_plots.py  generate_sankey.py  gwlcalculator.py  load_files.py  map_plot.py  misc.py  nearest.py  plotter.py  selector.py
duwcm/plots/: __init__.py  export_geodata.py  generate_alluvial.py  generate_chord.py  generate_graph.py  generate_maps.py  generate_plots.py  plot_all.py
duwcm/postprocess/: __init__.py  flow_matrix.py  local_results.py  save_cell.py
duwcm/utils/: __init__.py  units.py
duwcm/viz/: __init__.py  utils.py  viz_cells.py  viz_flows.py  viz_maps.py  viz_plots.py
examples/00_basics/: 00_basics.ipynb  config.yaml
examples/00_fehraltorf/: 00_fehraltorf.ipynb  01_fehraltorf.ipynb  config.toml  evapotranspiration_map.html  water_config.toml
examples/01_cellselection/: 01_cellselection.ipynb  config.toml  config.yaml
examples/02_scenarios/: 02_scenarios.ipynb  config.toml  config.yaml  scenarios.yaml
examples/03_diagnostic/: 03_diagnostic.ipynb
examples/04_diagnostic_scenarios/: 04_diagnostic_scenarios.ipynb  (+1 more)
(+77 files in other folders)
