[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duwcm"
version = "0.1.0"
authors = [
    {name = "Ricardo", email = "ricardo.reyes@eawag.ch"},
]
description = "Distributed urban water cycle model"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas",
    "numpy",
    "simpledbf",
    "matplotlib",
    "matplotlib-scalebar",
    "seaborn",
    "scikit-learn",
    "scipy",
    "numexpr",
    "tables",
    "h5py",
    "geopandas",
    "shapely",
    "pyproj",
    "fiona",
    "rasterio",
    "contextily",
    "dynaconf",
    "sqlalchemy",
    "tomli",
    "tomlkit",
    "tqdm",
    "pylint",
    "pint",
    "pint-pandas",
    "pycirclize",
    "kaleido"
]

[project.scripts]
duwcm = "duwcm.main:main"
duwcm-plot = "duwcm.plots:plot_all"
duwcm-point = "duwcm.postprocess:save_cell"

[tool.setuptools]
packages = ["duwcm"]